--- a/files/1_Python/3_boucles.ipynb
+++ b/files/1_Python/3_boucles.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "for i in range(5):\n",
+    "for i in range(5):\r\n",
     "    print(i)  # affiche i pour i variant de 0 à 4"
    ],
    "outputs": [
@@ -71,13 +71,6 @@
   {
    "cell_type": "markdown",
    "source": [
-    "**Réponse** : $n$ fois (c'est aussi le nombre d'entiers dans $\\{0, ..., n - 1\\}$."
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
     "L'exemple suivant permet de calculer la somme des 100 premiers entiers ($0 + 1 + 2 + ... + 99$) :"
    ],
    "metadata": {}
@@ -86,9 +79,9 @@
    "cell_type": "code",
    "execution_count": 15,
    "source": [
-    "somme = 0\n",
-    "for k in range(100):\n",
-    "    somme += k  # même chose que somme = somme + k\n",
+    "somme = 0\r\n",
+    "for k in range(100):\r\n",
+    "    somme += k  # même chose que somme = somme + k\r\n",
     "somme"
    ],
    "outputs": [
@@ -113,31 +106,6 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "source": [
-    "n = 100\n",
-    "n*(n-1)/2  # formule de Gauss"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "4950.0"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 8
-    }
-   ],
-   "metadata": {
-    "tags": [
-     "cor"
-    ]
-   }
-  },
-  {
    "cell_type": "markdown",
    "source": [
     "Une variante du `range` permet de parcourir les entiers de $a$ à $b - 1$ : `for i in range(a, b)`."
@@ -148,7 +116,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "source": [
-    "for i in range(3, 6):\n",
+    "for i in range(3, 6):\r\n",
     "    print(i)"
    ],
    "outputs": [
@@ -172,68 +140,11 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "source": [
-    "somme_racine = 0\n",
-    "for i in range(5, 21):\n",
-    "    somme_racine += i**0.5\n",
-    "somme_racine"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "55.519713441477826"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 18
-    }
-   ],
-   "metadata": {
-    "tags": [
-     "cor"
-    ]
-   }
-  },
-  {
    "cell_type": "markdown",
    "source": [
     "**Exercice** : Écrire une fonction `fact` telle que `fact(n)` renvoie $n!$ ($n$ factorielle), c'est à dire $n\\times(n-1)\\times ... \\times 2 \\times1$."
    ],
    "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "source": [
-    "def fact(n):\n",
-    "    res = 1\n",
-    "    for i in range(2, n+1):\n",
-    "        res *= i  # pareil que res = res * i\n",
-    "    return res\n",
-    "\n",
-    "fact(6)"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "720"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 19
-    }
-   ],
-   "metadata": {
-    "tags": [
-     "cor"
-    ]
-   }
   },
   {
    "cell_type": "markdown",
@@ -246,29 +157,6 @@
    "cell_type": "markdown",
    "source": [
     "**Exercice** : Calculer $u_{10}$, où $u_n$ est définie par $u_0 = 42$ et $u_{n+1} = \\sqrt{u_n} + 3u_n$."
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "source": [
-    "un = 42\n",
-    "for _ in range(10):\n",
-    "    un = un**.5 + 3*un\n",
-    "un"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "2787204.895558157"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 22
-    }
    ],
    "metadata": {}
   },
@@ -294,8 +182,8 @@
    "cell_type": "code",
    "execution_count": 9,
    "source": [
-    "L = [2, 3, 5, 7, 11]\n",
-    "for i in range(len(L)):  # les indices de L vont de 0 à len(L) - 1\n",
+    "L = [2, 3, 5, 7, 11]\r\n",
+    "for i in range(len(L)):  # les indices de L vont de 0 à len(L) - 1\r\n",
     "    print(L[i])"
    ],
    "outputs": [
@@ -324,7 +212,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "source": [
-    "for e in L:\n",
+    "for e in L:\r\n",
     "    print(e)"
    ],
    "outputs": [
@@ -353,10 +241,10 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "def somme(L):\n",
-    "    res = 0\n",
-    "    for e in L:\n",
-    "        res += e\n",
+    "def somme(L):\r\n",
+    "    res = 0\r\n",
+    "    for e in L:\r\n",
+    "        res += e\r\n",
     "    return res"
    ],
    "outputs": [],
@@ -373,10 +261,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "def appartient(x, L):\n",
-    "    for e in L:\n",
-    "        if x == e:\n",
-    "            return True\n",
+    "def appartient(x, L):\r\n",
+    "    for e in L:\r\n",
+    "        if x == e:\r\n",
+    "            return True\r\n",
     "    return False"
    ],
    "outputs": [],
@@ -392,33 +280,6 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
-   "source": [
-    "# 1.\n",
-    "def croissant(L):\n",
-    "    for i in range(len(L) - 1): # ici on est obligé de parcourir les indices pour comparer 2 éléments consécutifs\n",
-    "        if L[i] > L[i+1]:\n",
-    "            return False\n",
-    "    return True\n",
-    "\n",
-    "# 2.\n",
-    "def decroissant(L):\n",
-    "    return not croissant(L)"
-   ],
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-27-2b0e512eade5>, line 1)",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-27-2b0e512eade5>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    (* 1. *)\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
    "cell_type": "markdown",
    "source": [
     "Par défaut, une boucle `for i in range(n)` fait augmenter `i` de un à chaque passage. Il est possible de changer ce pas :"
@@ -429,7 +290,7 @@
    "cell_type": "code",
    "execution_count": 23,
    "source": [
-    "for i in range(0, 10, 2):  # entier de 0 à 9 en allant de 2 en 2\n",
+    "for i in range(0, 10, 2):  # entier de 0 à 9 en allant de 2 en 2\r\n",
     "    print(i)"
    ],
    "outputs": [
@@ -465,9 +326,9 @@
    "cell_type": "code",
    "execution_count": 26,
    "source": [
-    "i = 3\n",
-    "while i >= 0:\n",
-    "    print(i)\n",
+    "i = 3\r\n",
+    "while i >= 0:\r\n",
+    "    print(i)\r\n",
     "    i -= 1"
    ],
    "outputs": [
