Revert "Embed img"
This reverts commit 221eebbd723f28b318f7fbc43f53114227243418.

--- a/files/1_Python/cours/3_boucles.ipynb
+++ b/files/1_Python/cours/3_boucles.ipynb
@@ -349,7 +349,7 @@
    "cell_type": "markdown",
    "source": [
     "**Attention** : si la condition est toujours vraie, il y a \"boucle infinie\" et il faut l'arrêter avec le bouton stop : \n",
-    "<center> width=300></center>"
+    "<center><img src=img/stop.png width=300></center>"
    ],
    "metadata": {}
   },
